--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -1,9 +1,7 @@
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: $width-container;
-  padding-left: $p-container;
-  padding-right: $p-container;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 1150px;
+  padding: 0 !important;
+  margin: 0 auto;
 }
