--- a/css/main.css
+++ b/css/main.css
@@ -219,4 +219,8 @@ img {
   left: 400px;
   background-color: #253053;
 }
+
+.nameMain {
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
