--- a/css/main.css
+++ b/css/main.css
@@ -219,4 +219,40 @@ img {
   left: 400px;
   background-color: #253053;
 }
+
+.cont {
+  width: 100%;
+  height: 90vh;
+}
+
+.red {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-color: red;
+}
+
+.red::-webkit-input-placeholder {
+  color: red;
+  opacity: 1;
+}
+
+.red:-ms-input-placeholder {
+  color: red;
+  opacity: 1;
+}
+
+.red::-ms-input-placeholder {
+  color: red;
+  opacity: 1;
+}
+
+.red::placeholder {
+  color: red;
+  opacity: 1;
+}
+
+.green {
+  border-color: green;
+}
 /*# sourceMappingURL=main.css.map */
