--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -161,3 +161,25 @@
   left: 400px;
   background-color: #253053;
 }
+
+
+
+.cont {
+  width: 100%;
+  height: 90vh;
+}
+
+.red {
+  display: flex;
+  border-color: red;
+}
+
+.red::placeholder {
+  color: red;
+  opacity: 1;
+}
+
+.green {
+  border-color: green;
+}
+
