--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -183,3 +183,14 @@
   border-color: green;
 }
 
+.head-btn {
+  position: relative;
+  top: 2px;
+  font-size: 18px;
+  color:#333996;
+  // opacity: 0;
+}
+
+.hoverN {
+  cursor: pointer;
+}
