--- a/css/main.css
+++ b/css/main.css
@@ -255,4 +255,15 @@ img {
 .green {
   border-color: green;
 }
+
+.head-btn {
+  position: relative;
+  top: 2px;
+  font-size: 18px;
+  color: #333996;
+}
+
+.hoverN {
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
